1) Now you can save cities to the list of cities, you can delete items from the list. 2) The application data is cached. 3) The city can be opened on Yandex or Google maps on the screen of a separate city. ------------------------------------------------------- 1) Появилась возможность сохранять города в список городов, элементы из списка можно удалять. 2) Данные приложения кэшируются. 3) Город можно открыть на Яндекс или гугл картах на экране отдельного города.

--- a/app/src/main/res/layout-notnight/activity_main.xml
+++ b/app/src/main/res/layout-notnight/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_marginEnd="48dp"
         android:fontFamily="@font/philosofer"
         android:gravity="fill_horizontal"
-        android:text="Москва"
+        android:text="-"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="36sp"
@@ -31,9 +31,10 @@
         android:id="@+id/map_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@android:color/transparent"
+        android:onClick="onClickMap"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_of_sities"
@@ -44,8 +45,9 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:background="@android:color/transparent"
+        android:onClick="onClickAddCity"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search"
@@ -55,7 +57,7 @@
         android:id="@+id/list_of_sities"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@android:color/transparent"
         android:onClick="onClickMyList"
@@ -81,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="70dp"
-        android:text='32"'
+        android:text="-"
         android:textColor="#000000"
         android:textSize="72sp"
         app:layout_constraintStart_toEndOf="@+id/weather_img"
@@ -93,7 +95,7 @@
         android:layout_height="102dp"
         android:layout_marginStart="10dp"
         android:gravity="left"
-        android:text="Ясно"
+        android:text="-"
         android:textAlignment="gravity"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -118,11 +120,11 @@
             android:id="@+id/textView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="16dp"
             android:text="Прогноз"
             android:textColor="#000000"
-            android:textSize="36sp"
+            android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints" />
@@ -133,7 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="43dp"
-            android:text="1 марта, пн"
+            android:text="-"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +168,7 @@
             android:id="@+id/imageView13"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginTop="94dp"
+            android:layout_marginTop="84dp"
             android:layout_marginEnd="164dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -183,7 +185,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView13"
-            app:layout_constraintVertical_bias="0.166"
+            app:layout_constraintVertical_bias="0.1"
             app:srcCompat="@drawable/wind"
             tools:ignore="MissingConstraints" />
 
@@ -191,10 +193,10 @@
             android:id="@+id/temp_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="28dp"
             android:fontFamily="@font/philosofer"
-            android:text='23"'
+            android:text="-"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@+id/imageView11"
@@ -206,9 +208,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="44dp"
             android:fontFamily="@font/philosofer"
-            android:text="30%"
+            android:text="-"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@+id/imageView12"
@@ -219,28 +221,28 @@
             android:id="@+id/press_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="64dp"
             android:fontFamily="@font/philosofer"
-            android:text="770 мм"
+            android:text="-"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.285"
+            app:layout_constraintHorizontal_bias="0.16"
             app:layout_constraintStart_toEndOf="@+id/imageView13"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.515"
+            app:layout_constraintVertical_bias="0.443"
             tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/wind_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
             android:fontFamily="@font/philosofer"
-            android:text="CЗ, 5 м/с"
+            android:text="-"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@+id/imageView14"
@@ -275,7 +277,7 @@
                     android:layout_marginLeft="30dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="20dp"
-                    android:text="вт, 2"
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -296,7 +298,7 @@
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
-                    android:text='20"'
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -315,7 +317,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="20dp"
-                    android:text="вт, 2"
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -336,7 +338,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
-                    android:text='20"'
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -355,7 +357,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="20dp"
-                    android:text="вт, 2"
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -376,7 +378,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
-                    android:text='20"'
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -396,7 +398,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="20dp"
-                    android:text="вт, 2"
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -417,7 +419,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
-                    android:text='20"'
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -436,7 +438,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="20dp"
-                    android:text="вт, 2"
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -457,7 +459,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
-                    android:text='20"'
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -477,7 +479,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="20dp"
-                    android:text="вт, 2"
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -498,7 +500,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
-                    android:text='20"'
+                    android:text="-"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="24sp" />
@@ -509,9 +511,9 @@
 
     <ImageButton
         android:id="@+id/search"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:background="@android:color/transparent"
         android:onClick="onClickSearch"
