--- a/app/src/main/res/layout/activity_search_city.xml
+++ b/app/src/main/res/layout/activity_search_city.xml
@@ -29,6 +29,7 @@
             android:layout_marginTop="84dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/ramka"
+            android:paddingLeft="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.913"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +39,7 @@
             android:id="@+id/imageButton3"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="24dp"
             android:background="@android:color/transparent"
             android:onClick="onClickMyList"
@@ -49,10 +50,10 @@
 
         <ImageButton
             android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="25dp"
             android:background="@android:color/transparent"
             android:onClick="OnClickBack"
             app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +64,7 @@
             android:id="@+id/searchCity"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginTop="104dp"
+            android:layout_marginTop="105dp"
             android:layout_marginEnd="32dp"
             android:background="@android:color/transparent"
             android:onClick="OnClickSearch"
