--- a/app/src/main/res/layout/city_row.xml
+++ b/app/src/main/res/layout/city_row.xml
@@ -18,6 +18,7 @@
 
 
         <LinearLayout
+            android:id="@+id/topLine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -42,8 +43,7 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/sunny" />
+                android:scaleType="fitCenter" />
 
         </LinearLayout>
 
